--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 
                     <li><a href="#">Bookings</a></li>
                     <li><a href="#">Donate</a></li>
-                    <li><a href="https://forms.gle/Dt62TsnGz5PCJrzf9%22%3EJoin">Join the Team</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeX4mLk-GCVz3bgNxQMTLXdQu7k7TXJdqpP8LVHClnF8NW8Qw/viewform?usp=sf_link">Join the Team</a></li>
                     <li><a href="#">About</a></li>
                 
                 </ul>
@@ -33,7 +33,7 @@
                     <small>Contact:</small>
                 </div>
                 <div class ="email">
-                    <small>Kleen_Kuts@hotmail.com</small>
+                    <small>kleenkutsdavis@gmail.com</small>
                 </div>
                 <li class="instagramlogo">
                     <img src = "instgram_white.png" class="instagram_logo">
