--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Kleen Kuts</title>
-        <link rel="stylesheet" href="brody_home.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="banner">
